# echo-bot

./: .gitignore  .pylintrc  CHANGELOG.md  README.md  logging.ini  pyproject.toml
.github/: copilot-instructions.md
echo_bot/: __init__.py  __main__.py  chatbot.py  service.py  util.py
tests/: __init__.py  test_chatbot.py  test_main.py  test_service.py
